scss/partials/_global.scss
/* ... */
.input .errorlist {
	font-size: 0.9em;
}

.back a {
	text-decoration: none;
}

.colors {
	.color {
		display: inline-block;
		width: 20px;
		height: 20px;
		margin-right: 5px;
		padding: 3px;
		margin: 4px 7px 4px 4px;
		cursor: pointer;

		&:hover, &.selected {
			padding: 7px;
			margin: 0 3px 0 0;
		}

		&.selected {
		}
	}
}

.pagination {
	text-align: right;
	white-space: nowrap;

	a, span {
		padding: 0 4px;
		margin: 0 2px;

		&:first-child {
			margin-left: 0;
		}
	}

	a {
		background: lighten($text, 80%);
		border-radius: 3px;
		text-decoration: none;

		&:hover {
			background: $text;
			color: white;
		}
	}
}

#entries {
	margin: 0.5em 0;

	.empty {
		padding: 7em 1em 8em 1em;
		background: darken(white, 5%);
		border-radius: 5px;
	}
}

.entry {
	padding: 5px 0;
	a {
		text-decoration: none;
		color: lighten(black, 20%);
	}

	&.new a {
		color: black;
		font-weight: bold;
	}

	.title {
		padding-left: 20px;
		background-repeat: no-repeat;
		background-position: left 6px;
		background-size: 16px;

		span {
			display: inline;
			margin-left: 24px;
		}
	}

	.date {
		text-align: right;
	}

}

.legend, .legend a {
	padding: 0 !important;
	color: lighten($text, 20%);
}

.ellipsis {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.edit, .edit_cat {
	opacity: 0.5;
}

.edit {
	border-radius: 5px;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

h2 .cat {
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	margin-right: 1px;
}

.edit {
	border-top-right-radius: 5px !important;
	border-bottom-right-radius: 5px !important;
}

.count {
	overflow: hidden;
	a.cat {
		float: left;
		padding: 0 2px;
		height: 26px;
	}
	.edit {
		display: inline;
		border-radius: 0;
		border-right: 1px solid white;

		&.cat {
			opacity: 1 !important;
			margin-right: 5px;
		}
	}

	white-space: nowrap;

	form {
		display: inline-block;
		margin: 0;
	}
}

code, tt {
	border: 1px solid lighten($text, 75%);
	border-radius: 3px;
	padding: 2px 3px;
}

pre, code, tt {
	font: 1rem Inconsolata, Monaco, monospace;
}

pre code {
	border: none;
	font-size: 1em;
}

#entry > h2:hover {
	.edit, .edit_cat {
		opacity: 1;
		width: 20px;
	}

}

#entry, .help {
	> h2 {
		font-size: 1.5em;
		line-height: 1.2em;
		padding: 0.25em 0;
		border-bottom: 1px solid #ddd;
	}

	.externalmedia {
		clear: both;
		color: lighten($text, 20%);
		border: 1px solid #ddd;
		padding: 5px;
		font-size: 0.9rem;
		margin-bottom: 5px;

		input {
			font-size: inherit;
			font-family: inherit;
		}

		form {
			margin: 0;
			padding: 0;
		}
	}

	.content {
		line-height: 1.5em;

		strong, b {
			font-weight: bold;
		}

		em, i {
			font-style: italic;
		}

		h2 {
			border: none;
		}

		p {
			padding: 0.5em 0;
		}

		ul {
			list-style: disc;
			margin: 0.5em 0;

			ul {
				list-style: circle;
				margin-left: 1em;
			}
		}

		blockquote {
			border-left: 5px solid lighten($text, 75%);
			padding-left: 10px;
			color: lighten($text, 20%);

			ul, ol {
				margin-left: 1em;
			}
		}

		.feedhq-image {
			position: relative;
			overflow: auto;

			.imgmenu {
				display: none;
				position: absolute;
				top: 5px;
				left: 5px;

				a {
					display: inline-block;
					height: 30px;
					background: rgba(0, 0, 0, 0.5);
					padding: 0 5px;
					cursor: pointer;
					font-size: 1.5rem;
					color: lighten($text, 70%);
					border-right: 1px solid rgba(255, 255, 255, 0.2);
					text-decoration: none;

					span {
						font-size: 18px;

						&.text {
							font-size: 20px;
						}
					}

					&:hover, &.selected {
						color: lighten($text, 100%);
					}

					&:first-child {
						border-radius: 3px 0 0 3px;
					}

					&:last-child {
						border-radius: 0 3px 3px 0;
						border: none;
					}
				}
			}
		}
	}

	.date {
		color: #777;

		a {
			background-repeat: no-repeat;
			background-size: 16px 16px;
			background-position: left center;
		}
	}

	.actions {
		text-align: right;

		form {
			margin: 0;
			display: inline-block;
		}

		input {
			font-size: 24px;
		}
	}

	.date, .actions {
		margin-bottom: 1em;
		font-size: 0.8em;
	}
}

.col {
	.new {
		font-weight: bold;
	}

	li {
		padding: 3px 0;
		background-repeat: no-repeat;
		background-position: left 6px;
		background-size: 16px;
		a:first-child {
			padding-left: 20px;
		}
	}

	a {
		text-decoration: inherit;

		&.unread {
			padding: 0 5px;
			border-radius: 3px;
			background: darken(white, 10%);

			&:hover {
				background: darken(white, 20%);
			}
		}
	}
}

